# KunQuant

./: .clang-format  .gitignore  .gitmodules  CAPI.md  CMakeLists.txt  Customize.md  NewOperators.md  Operators.md  Readme.md  Stream.md  setup.py
.github/: FUNDING.yml
.github/workflows/: Dockerfile  ccpp.yml  docker.yml  publish-to-test-pypi.yml  requirements.txt
KunQuant/: Driver.py  Op.py  Stage.py
KunQuant/jit/: cfake.py  env.py
KunQuant/ops/: CompOp.py  ElewiseOp.py  MiscOp.py  ReduceOp.py  __init__.py
KunQuant/passes/: CodegenCpp.py  Decompose.py  ExprFold.py  InferWindow.py  MergeLoops.py  Partitioner.py  SpecialOpt.py  TempWindowElim.py  Util.py  __init__.py
KunQuant/predefined/: Alpha101.py  Alpha158.py  alpha101.py
KunQuant/runner/: __init__.py
cpp/Kun/: Aggregration.cpp  Base.hpp  CApi.cpp  CApi.h  Context.hpp  CorrWith.cpp  CorrWith.hpp  Executor.cpp  IO.cpp  IO.hpp  LayoutMappers.hpp  Math.hpp  MathUtil.hpp  Module.cpp  Module.hpp  Ops.hpp  PyBinding.cpp  Rank.cpp  Rank.hpp  Readme.md  RunGraph.hpp  Runtime.cpp  Scale.cpp  Scale.hpp  SkipList.cpp  SkipList.hpp  Stage.hpp  StateBuffer.hpp  StreamBuffer.hpp
cpp/Kun/Ops/: Quantile.hpp
cpp/KunSIMD/: Vector.hpp
cpp/KunSIMD/cpu/: Math.hpp  Table.hpp  cast.hpp  common.hpp  f32x16.hpp  f32x4_neon.hpp  f32x8.hpp  f64x2.hpp  f64x4.hpp  f64x8.hpp  gather.hpp  gen_table.py  s32x16.hpp  s32x8.hpp  s64x2.hpp  s64x4.hpp  s64x8.hpp  tables.cpp
cpp/KunSIMD/cpu/neon/: cast.hpp  common.hpp  f32x4.hpp  f64x2.hpp  gather.hpp  s32x4.hpp  s64x2.hpp
cpp/KunSIMD/cpu/x86/: cast.hpp  common.hpp  f32x16.hpp  f32x4.hpp  f32x8.hpp  f64x4.hpp  f64x8.hpp  gather.hpp  s32x16.hpp  s32x4.hpp  s32x8.hpp  s64x4.hpp  s64x8.hpp
cpp/Python/: PyBinding.cpp
doc/: CAPI.md  Customize.md  Stream.md  Utility.md
projects/: CMakeLists.txt
projects/Alpha101/: generate.py  list.txt
projects/Alpha101Selected/: generate.py  list.txt
projects/Alpha101Stream/: generate.py  list.txt
projects/Alpha158/: generate.py  list.txt
projects/Test/: generate.py  list.txt
tests/: gen_alpha101_stream.py  gen_alpha158.py  test.py  test2.py  test_alpha101.py  test_alpha158.py  test_codegen.py  test_runtime.py  test_stream.py  tests.sh  tests_arm.sh  tests_avx512.sh
tests/KunTestUtil/: gen_data.py  ref_alpha101.py
tests/capi/: test_c.cpp  test_skiplist.cpp
tests/cpp/: TestRuntime.cpp
